# mc833-projeto

./: .gitignore  CMakeLists.txt  README.org
docs/: annotated.html  annotated_dup.js  catalog_8c.html  catalog_8c.js  catalog_8c_source.html  catalog_8h.html  catalog_8h.js  catalog_8h_source.html  classes.html  client_8c.html  client_8c.js  client_8c_source.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a65467b043fce6081aa9e597b27062f1.html  dir_c1be8d27e7f84178e95f152701110b19.js  files.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  menudata.js  movie_8c.html  movie_8c.js  movie_8c_source.html  movie_8h.js  movie_8h_source.html  navtreeindex0.js  net__utils_8c_source.html  relatorio.org  relatorio.tex  server_8c.html  server_8c_source.html  struct_catalog.html  struct_catalog.js  struct_movie.html  struct_movie.js  struct_payload.js  (+4 more)
docs/html/: annotated.html  catalog_8c.html  catalog_8c_source.html  catalog_8h.html  catalog_8h_source.html  classes.html  client_8c.html  client_8c_source.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a65467b043fce6081aa9e597b27062f1.html  dir_c1be8d27e7f84178e95f152701110b19.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  movie_8c.html  movie_8c.js  movie_8c_source.html  movie_8h.html  movie_8h.js  movie_8h_source.html  navtreeindex0.js  net__utils_8c.html  net__utils_8c_source.html  net__utils_8h.html  net__utils_8h.js  net__utils_8h_source.html  server_8c.html  server_8c_source.html  struct_catalog.html  struct_movie.html  struct_movie.js  struct_payload.html  (+6 more)
docs/latex/: annotated.tex  catalog_8c.tex  catalog_8c_source.tex  catalog_8h.tex  catalog_8h_source.tex  client_8c.tex  client_8c_source.tex  dir_313caf1132e152dd9b58bea13a4052ca.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_a65467b043fce6081aa9e597b27062f1.tex  files.tex  (+24 more)
doxygen/: dir_313caf1132e152dd9b58bea13a4052ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_a65467b043fce6081aa9e597b27062f1.js  dir_c1be8d27e7f84178e95f152701110b19.html  functions.html  functions_vars.html  globals.html  movie_8h.html  navtreedata.js  net__utils_8c.html  net__utils_8c.js  net__utils_8h.html  net__utils_8h_source.html  server_8c.js  struct_payload.html  utils_8h_source.html
relatorio/: relatorio.org  relatorio.tex
src/: catalog.c  catalog.h  catalogo.c  catalogo.h  filme.c  filme.h  generos.c  generos.h  movie.c  movie.h  net_utils.c  net_utils.h  utils.h
(+73 files in other folders)
